--- a/src/stories/Introduction.stories.mdx
+++ b/src/stories/Introduction.stories.mdx
@@ -6,7 +6,7 @@ import OwllyLogo from './assets/owlly-logo.svg';
 
 import LinkTo from '@storybook/addon-links/react';
 
-<Meta title="Owlly/Introduction" />
+<Meta title="Owlly" />
 
 <style>{`
   .subheading {
